--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 }
 
 #nprogress .bar {
-  background: #ff3c00;
+  background: #2563EB;
 
   position: fixed;
   z-index: 1031;
@@ -28,7 +28,7 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px #ff3c00, 0 0 5px #ff3c00;
+  box-shadow: 0 0 10px #2563EB, 0 0 5px #2563EB;
   opacity: 1;
 
   -webkit-transform: rotate(3deg) translate(0px, -4px);
@@ -94,7 +94,7 @@ abbr:where([title]) {
   text-decoration: none !important;
 }
 .react-calendar__tile--active {
-  background-color: #ff3c00 !important;
+  background-color: #2563EB !important;
 }
 
 .react-calendar button {
@@ -109,12 +109,12 @@ abbr:where([title]) {
 }
 
 .react-calendar__tile--now {
-  background-color: #ff3c0071 !important;
+  background-color: #2563EB71 !important;
 }
 
 react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
-  background-color: #ff3c00 !important;
+  background-color: #2563EB !important;
 }
 
 .react-calendar {
