--- a/src/index.css
+++ b/src/index.css
@@ -125,3 +125,10 @@ react-calendar__tile--active:enabled:hover,
 .react-calendar__tile {
   line-height: 50px !important;
 }
+
+#home {
+  background-image: url("./assets/images/bg.png");
+  object-fit: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
