--- a/src/index.css
+++ b/src/index.css
@@ -132,3 +132,10 @@ react-calendar__tile--active:enabled:hover,
   background-repeat: no-repeat;
   background-position: center center;
 }
+
+#booking {
+  background-image: url("./assets/images/booking-bg.svg");
+  object-fit: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
